--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,5 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
   },
-  "devDependencies": {},
   "description": ""
 }
